assets/css/main.less
/* ... */
// ==========================================================================
// Home
// ==========================================================================

.home{

  #site-header{
    min-height:360px;
    background-image:url(../img/hero.jpg);
    background-size:cover;
    position:relative;

    h1{
      .title;
      color:#fff;
      position:absolute;
      top:30%;
      left:@small-padding;
      right:@small-padding;
    }

    #skip-to-content{
      height:46px;
      width:46px;
      display:block;
      text-indent:-999em;
      .icon-scroll-down;
      position:absolute;
      bottom:15%;
      left:50%;
      margin-left:-23px;
    }
  }

  #content{
    h1,
    h2{
      .title;
    }

    section{
      border-bottom:1px solid @default-color;
      margin:0 0 @small-margin;
      padding:0 0 @small-margin;
      text-align:justify;

      h2{
        position:relative;
        padding-top:45px;

        &:before{
          content:'';
          display:block;
          width:32px;
          height:32px;
          position:absolute;
          top:0;
          left:50%;
          margin-left:-16px;
        }
      }

      &:last-child{
        border:0;
        padding:0;
      }

      &.our-company{
        h2:before{
          .icon-company;
        }
      }
      &.services{
        h2:before{
          .icon-services;
        }
      }
      &.performance{
        h2:before{
          .icon-performance;
        }
      }

      @media @small-query{
        text-align:center;
      }
    }

    p:last-child{
      margin:0;
    }

    a{
      font-style:italic;
    }
  }
}

// ==========================================================================
// Our company
// ==========================================================================

.our-company{

  h1{
    position:relative;
    padding-top:45px;

    &:before{
      content:'';
      display:block;
      width:32px;
      height:32px;
      position:absolute;
      top:0;
      left:50%;
      margin-left:-16px;
      .icon-company;
    }
  }

  #content{
    h1,
    h2{
      .title;
    }

    section{
      &.introduction{
        @media @small-query{
          text-align:center;
        }
      }
      &.philosophy{
        @media @small-query{
          float:left;
          width:45%;
        }
      }
      &.principles{
        @media @small-query{
          float:right;
          width:45%;
        }
      }
      &.management-team{
        .team-member{
          margin-bottom:@small-margin;

          .profile{
            text-align:center;
            margin:0 0 1em;

            img{
              width:auto;
              height:100%;

              @media @small-query{
                height:90px;
              }
            }

            .name{
              display:block;
              font-weight:400;
            }
            .role{
              font-weight:300;
            }
          }
        }

        @media @small-query{
          .team-member{
            display:table;

            .profile,
            .info{
              display:table-cell;
              vertical-align:top;
            }

            .profile{
              width:20%;
              text-align:left;
            }
            .info{
              width:80%;
            }
          }
        }
      }
    }

    blockquote{
      clear:both;
      .clearfix;
      font-style:italic;
      font-size:1.25rem;
      letter-spacing:5px;
      border:0;
      position:relative;
      padding:0 @large-padding 3em * 0.7;

      cite{
        color:@default-color;
        letter-spacing:0;
        text-align:right;
        position:absolute;
        bottom:0;
        right:@small-padding;

        strong{
          display:block;
        }

        &:before{
          content:none;
        }        

        @media @small-query{
          right:15%;
        }
      }

      &:before,
      &:after{
        display:inline-block;
        font-size:2em;
        color:@secondary-color;
        line-height:0.5;
        position:relative;
        top:0.25em;
      }

      &:before{
        content:'\201C';
        margin-left:-.75em;
      }
      &:after{
        content:'\201D';
      }

      @media @small-query{
        padding:0 15% 3em * 0.7;
      }
    }
  }
}

// ==========================================================================
// Services
// ==========================================================================

.services{

  h1{
    position:relative;
    padding-top:45px;

    &:before{
      content:'';
      display:block;
      width:32px;
      height:32px;
      position:absolute;
      top:0;
      left:50%;
      margin-left:-16px;
      .icon-services;
    }
  }

  #content{
    h1,
    h2{
      .title;
    }

    section{
      &.introduction{
        @media @small-query{
          text-align:center;
        }
      }
      &.investment-philosophy{
        @media @small-query{
          float:left;
          width:45%;
        }
      }
      &.risk-management{
        @media @small-query{
          float:right;
          width:45%;
        }
      }
      &.trusts{
        @media @small-query{
          float:left;
          width:26%;
          margin-right:11%;
        }
      }      
      &.pic{
        @media @small-query{
          float:left;
          width:26%;
        }
      }
      &.structuring{
        @media @small-query{
          float:right;
          width:26%;
        }
      }      
      &.universal-life-insurance{
        @media @small-query{
          clear:both;
          float:left;
          width:45%;
        }
      }
      &.charitable-foundations{
        @media @small-query{
          float:right;
          width:45%;
        }
      }
    }
  }
}
/* ... */

